fix 기능 추가 및 수정
