# controller/order.go
@@ -4,77 +4,60 @@ import (
 	"WBABEProject-04/model"
 	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 )
-
-type anableToOrder struct {
-	menuName  string
-	available bool
-	status    int
-}
 
 // 주문자
 
-// 주문이 가능한지 확인한다.
-func (p *Controller) CheckMenu(c *gin.Context) {
-	customer := model.Customer{}
-	err := c.ShouldBindJSON(&customer)
+// 주문을 변경할 수 있다.
+// 주문 상태가 조리중, 배달 중이면 불가능
+// 주문 번호를 파라미터로 받고 POST로 수정하기
+func (p *Controller) UpdateOrder(c *gin.Context) {
+	sOrderNumber := c.Param("ordernumber")
+	fmt.Println(sOrderNumber)
+	var recvOrder *model.Order
+
+	err := c.ShouldBindJSON(&recvOrder)
 	if err != nil {
 		p.RespError(c, nil, 400, "fail, Not Found Param", nil)
 		c.Abort()
 		return
 	}
-	anable := []anableToOrder{}
-	// 주문 하려는 메뉴가 있는지 확인
-	orderList := customer.Orders
-	// var menus []model.Menu
-	for _, order := range orderList {
-		// 해당 주문을 접수중으로 업데이트
-		err := p.md.UpdateOrderStatus(order, model.Accepting)
-		if err != nil {
-			p.RespError(c, nil, http.StatusUnprocessableEntity, "fail update db", err)
-			return
-		}
-		for _, menu := range order.Menus {
-			menu, err := p.md.GetOneMenu(menu.MenuId)
-			// 메뉴가 없으면 리턴
-			if err != nil {
-				p.RespError(c, nil, http.StatusUnprocessableEntity, "fail find db", err)
-				return
-			} else {
-				// menus = append(menus, menu)
-				temp := anableToOrder{}
 
-				temp.menuName = menu.Name
-				if menu.Quantity < 1 || menu.Available {
-					temp.available = true
-					temp.status = model.Cancellation
-					err := p.md.UpdateOrderStatus(order, model.Cancellation)
-					if err != nil {
-						p.RespError(c, nil, http.StatusUnprocessableEntity, "fail update db", err)
-						return
-					}
-				} else {
-					anable = append(anable, temp)
-				}
+	// 주문 받은 메뉴를 찾는다.
+	var user primitive.ObjectID
+	if user, err = primitive.ObjectIDFromHex(sOrderNumber); err != nil {
+		p.RespError(c, nil, 400, "fail, Not Found Param", nil)
+		return
+	}
+	// 유저의 아이디를 기준으로 주문내역을 찾는다.
+	var orders []model.Order
+	if orders, err = p.md.GetOrdersByUserID(user); err != nil {
+		p.RespError(c, nil, 400, "Order history not found.", nil)
+		return
+	}
+	var recvMenus []model.Menu
+	for _, menu := range recvOrder.Menus {
+		recvMenus = append(recvMenus, menu)
+	}
+
+	for _, order := range orders {
+		if order.Status == 3 {
+			// 상태값이 조리중이 시작되지 않았으니 변경 가능
+			for _, recvmenu := range recvMenus {
+				p.md.UpdateOrder(recvmenu, order)
 			}
 		}
 	}
-	fmt.Println("anable => ", anable)
-	// 주문 수량이 여유 있는지 확인
-	if len(anable) <= 0 {
-		c.JSON(http.StatusOK, gin.H{
-			"result": "메뉴가 매진되었습니다.",
-		})
-	} else {
-		c.JSON(http.StatusOK, gin.H{
-			"result": "ok",
-		})
-	}
 }
 
-// 주문 요청
+// OrderMenu godoc
+// @Summary call OrderMenu, return ok by json.
+// @Description 주문을 요청한다. 요청이 완료되면 주문 번호를 json 형태로 리턴한다.
+// @Router /order [post]
 func (p *Controller) OrderMenu(c *gin.Context) {
 	customer := model.Customer{}
 	err := c.ShouldBindJSON(&customer)
@@ -83,21 +66,195 @@ func (p *Controller) OrderMenu(c *gin.Context) {
 		c.Abort()
 		return
 	}
-	tempOrder := []model.Menu{}
-
-	orderList := customer.Orders
-	for _, order := range orderList {
+	resultCustomer := model.Customer{}
+	resultCustomer.Address = customer.Address
+	resultCustomer.Nicname = customer.Nicname
+	resultCustomer.Phone = customer.Phone
+	resultCustomer.ID = primitive.NewObjectID()
+	resultOrders := []model.Order{}
+	tempOrder := model.Order{}
+	menus := []model.Menu{}
+	for _, order := range customer.Orders {
+		tempOrder.Status = model.Accepting
 		for _, menu := range order.Menus {
-			temp, err := p.md.GetOneMenu(menu.MenuId)
-			if err != nil {
-				p.RespError(c, nil, 400, "fail find db", nil)
-				c.Abort()
+			if tempmenu, err := p.md.GetOneMenu("name", menu.Name); err != nil {
+				p.RespError(c, nil, http.StatusUnprocessableEntity, "fail find menu", err)
 				return
+			} else {
+				menus = append(menus, tempmenu)
 			}
-			fmt.Println("=->", temp)
-			// order.Menus = copy(tempOrder, temp)
-			tempOrder = append(tempOrder, temp)
+		}
+		tempOrder.Menus = menus
+		tempOrder.Status = model.Receipt
+		tempOrder.CreatedAt = time.Now()
+		tempOrder.ID = primitive.NewObjectID()
+		tempOrder.CustomerID = resultCustomer.ID
+	}
+	if err := p.md.CreateOrder(tempOrder); err != nil {
+		p.RespError(c, nil, http.StatusUnprocessableEntity, "fail create order", err)
+		return
+	}
+
+	resultOrders = append(resultOrders, tempOrder)
+	resultCustomer.Orders = resultOrders
+	if err := p.md.CreateCustomer(resultCustomer); err != nil {
+		p.RespError(c, nil, http.StatusUnprocessableEntity, "fail create order", err)
+		return
+	} else {
+		tempOrder := model.OrderNumber{}
+
+		for _, order := range resultCustomer.Orders {
+			tempOrder.OrderList = append(tempOrder.OrderList, (primitive.ObjectID)(order.ID))
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"res":         "ok",
+			"orderNumber": tempOrder.OrderList,
+		})
+	}
+}
+
+// GetSortedMenu godoc
+// @Summary 메뉴 리스트 조회 및 정렬(추천/평점/주문수/최신)
+// @Description 판매자가 추천설정을 한 메뉴들의 리스트를 가져올 수 있다.
+// @Param	grade query string	false	"condition"
+// @Param	favorite query string	false	"condition"
+// @Param	count query string	false	"condition"
+// @Param	createdat query string	false	"condition"
+// @Param	1 query int	false	"orderby"
+// @Success 200 {string} string "ok"
+// @Failure 400 {string} string "err message"
+// @Failure 422 {string} string "fail, Not Found Param"
+// @Router /order [get]
+func (p *Controller) GetSortedMenu(c *gin.Context) {
+	query := model.QueryData{}
+
+	if err := c.ShouldBindQuery(&query); err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			"message": err.Error(),
+		})
+		return
+	}
+	if query.OrderBy != 1 {
+		query.OrderBy = -1
+	}
+	result, err := p.md.GetSortedMenu(query)
+	if err != nil {
+		p.RespError(c, nil, http.StatusUnprocessableEntity, "fail, Not Found Param", err)
+		c.Abort()
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"res":  "ok",
+		"data": result,
+	})
+}
+
+func (p *Controller) GetOrderHistory(c *gin.Context) {
+	customerID := c.Param("customerID")
+	if result, err := primitive.ObjectIDFromHex(customerID); err != nil {
+		p.RespError(c, nil, 400, "fail, Not Found Param", err)
+		c.Abort()
+		return
+	} else {
+		if orders, err := p.md.GetOrdersInfoByUserID("his", result); err != nil {
+			p.RespError(c, nil, 400, "fail, not found customer", err)
+			return
+		} else {
+			if len(orders) == 0 {
+				orders = nil
+			}
+			c.JSON(http.StatusOK, gin.H{
+				"res":  "ok",
+				"data": orders,
+			})
 		}
 	}
-	fmt.Println("=>", tempOrder)
+}
+
+func (p *Controller) GetOrderInfo(c *gin.Context) {
+	customerID := c.Param("customerID")
+	if result, err := primitive.ObjectIDFromHex(customerID); err != nil {
+		p.RespError(c, nil, 400, "fail, Not Found Param", err)
+		c.Abort()
+		return
+	} else {
+		if orders, err := p.md.GetOrdersInfoByUserID("", result); err != nil {
+			p.RespError(c, nil, 400, "fail, not found customer", err)
+			return
+		} else {
+			if len(orders) == 0 {
+				c.JSON(http.StatusOK, gin.H{
+					"res":  "ok",
+					"data": nil,
+				})
+			}
+			c.JSON(http.StatusOK, gin.H{
+				"res":  "ok",
+				"data": orders,
+			})
+		}
+
+	}
+}
+
+// WriteReview godoc
+// @Summary call WriteReview, return ok by json.
+// @Description 주문 번호를 확인 후 배송완료가 된 주문이면 리뷰와 평점을 작성할 수 있다.
+// @name WriteReview
+// @Accept  json
+// @Produce  json
+// @Router /history/review/:orderNumber [post]
+func (p *Controller) WriteReview(c *gin.Context) {
+	orderNumber := c.Param("orderNumber")
+	recvReview := model.Review{}
+	var err error
+	if err = c.ShouldBindJSON(&recvReview); err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+			"message": err.Error(),
+		})
+		return
+	}
+
+	var orderID primitive.ObjectID
+	if orderID, err = primitive.ObjectIDFromHex(orderNumber); err != nil {
+		p.RespError(c, nil, 400, "You entered the wrong order number.", err)
+		return
+	}
+
+	if _, err := p.md.GetOrderByID(orderID); err != nil {
+		p.RespError(c, nil, 400, "fail, Not Found Order", err)
+		return
+	} else {
+		if orderStatus, err := p.md.GetOrderStatusByOrderID(orderID); err != nil {
+			p.RespError(c, nil, 400, "fail, Not Found Order", err)
+			return
+		} else {
+			if orderStatus != 7 {
+				p.RespError(c, nil, 200, "Your order has not been completed.", err)
+				return
+			}
+			p.md.CreateReview(recvReview)
+		}
+	}
+}
+
+func (p *Controller) GetReview(c *gin.Context) {
+	menuID := c.Param("menuID")
+	if pMenuID, err := primitive.ObjectIDFromHex(menuID); err != nil {
+		p.RespError(c, nil, 400, "fail, Not Found Param", err)
+		c.Abort()
+		return
+	} else {
+		if result, err := p.md.GetReviewByMenuID(pMenuID); err != nil {
+			c.JSON(http.StatusOK, gin.H{
+				"res":  "ok",
+				"data": nil,
+			})
+		} else {
+			c.JSON(http.StatusOK, gin.H{
+				"res":  "ok",
+				"data": result,
+			})
+		}
+	}
 }
